source/css/style.css
/* Fonts */

@font-face {
  font-family: 'Dancing Script';
  src: url('../fonts/dancingscript/dancingscript-bold-webfont.woff2') format('woff2'),
       url('../fonts/dancingscript/dancingscript-bold-webfont.woff') format('woff'),
       url('../fonts/dancingscript/dancingscript-bold-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Oswald';
  src: url('../fonts/oswald/oswald-medium-webfont.woff2') format('woff2'),
       url('../fonts/oswald/oswald-medium-webfont.woff') format('woff'),
       url('../fonts/oswald/oswald-medium-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Lato';
  src: url('../fonts/lato/lato-regular-webfont.woff2') format('woff2'),
       url('../fonts/lato/lato-regular-webfont.woff') format('woff'),
       url('../fonts/lato/lato-regular-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

html {
  font-family: 'Lato', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Oswald', sans-serif;
}

/* Base */

html, body {
  height: 100%;
}

.background {
  background: #FFF;
  background: linear-gradient(135deg, #FFF59D 50%, #FFF 50%);
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

/* Navigation */

nav {
  background: transparent;
}

.brand-logo {
  width: 13%;
}

/* Banner */

.title {
  font-weight: bold;
}

@media only screen and (max-width: 601px) {
  .title {
    font-size: 2.92rem;
    line-height: 110%;
    margin: 1.46rem 0 1.168rem 0;
  }
  .subtitle {
    font-size: 2.28rem;
    line-height: 110%;
    margin: 1.14rem 0 .912rem 0;
  }
}

